# claude-agent-sdk-demos

./: README.md  mandala-chart-builder.skill  mandala-maker.md
cldash/: API.md  CODE_MIGRATION_ASSESSMENT.md  FEATURES_COMPLETE.md  PRACTICAL_ANALYSIS.md  README.md  SOCIAL_CONTENT.md  agent-demo.ts  demo.ts  package-lock.json  package.json  tsconfig.json
cldash/evaluation/: EVALUATION_FRAMEWORK.md  MOMENT_REPOS_CATALOG.json  README.md  REAL_WORLD_FINDINGS.md  REPOSITORY_CATALOG.md  RESULTS.md  RL_GUIDE.md  TESTING_GUIDE.md
cldash/examples/: code-migration.ts  migration-v2.ts
cldash/lib/: assert.ts  exec.ts  index.ts  parallel.ts  pipe.ts  retry.ts  transaction.ts
codebase-cartographer-ui/: README.md  start.sh
codebase-cartographer-ui/backend/: .gitignore  server.py
codebase-cartographer-ui/frontend/: index.html  package.json
dbos-integration/: .env.example  .gitignore  QUICKSTART.md  README.md  dbos-config.yaml  pyproject.toml
dbos-integration/examples/: __init__.py  research_workflow.py  simple_query.py
email-agent/: README.md
email-agent-python/: .env.example  .gitignore  README.md  requirements.txt
email-agent-python/agent/: types.py
email-agent-python/ccsdk/: __init__.py  actions_manager.py  agent_tools.py  email_agent_prompt.py  listeners_manager.py
email-agent-python/database/: __init__.py  config.py  email_db.py  email_sync.py
email-agent-python/server/: server.py
email-agent/database/: database-manager.ts  email-db.ts
mandala-app/: .gitignore  README.md
research-agent/: TESTING.md  test_simple.py  test_wide_research.sh
(+56 files in other folders)
